[package]
name = "mock_me"
version = "0.2.2"
authors = ["David Raifaizen <d-raif@hotmail.com>"]
description = "MockMe is a tool used to mock dependencies / function calls when running unit (lib) tests in Rust."
repository = "https://github.com/craftytrickster/mock_me"
readme = "README.md"
keywords = ["unit-test", "test", "mock", "mocking"]
categories = ["development-tools::testing"]
license = "MIT"

[dependencies]
mock_me_test_context = "0.1.1"

[lib]
crate-type = ["proc-macro"]